fix resposive errors on mobile nav

--- a/src/components/content/home/mainContent/MainContent.css
+++ b/src/components/content/home/mainContent/MainContent.css
@@ -23,6 +23,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+    font-weight:400;
 }
 
 .mainContent__initScroll {
