--- a/src/components/util/containers/Containers.css
+++ b/src/components/util/containers/Containers.css
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 5.822vh;
+    overflow: hidden;
     padding: 0px clamp(2rem, 30vw - 13rem, 12rem);
     background-color: rgb(12, 12, 12);
 }
@@ -34,6 +35,7 @@
     min-height: 95vh;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     padding: 144px clamp(2rem, 30vw - 13rem, 12rem);
     box-shadow:
         inset 0 100px 50px rgba(0, 0, 0, 1),
